Fix scrollbar issues
Removing margin on map dialog to avoid page overflow, and move dialog
to right side of page to keep from having a scrollbar in the middle of
the page

--- a/public/css/recycling.css
+++ b/public/css/recycling.css
@@ -54,7 +54,7 @@ a.close-dialog {
 }
 
 #viewContent {
-	margin-top: 2em;
+	margin-top: 0;
 }
 
 #hey_chicagoans {
